--- a/index.html
+++ b/index.html
@@ -66,9 +66,33 @@
         }
 
         main {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .game-layout {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 30px;
+            grid-template-columns: 300px 1fr 300px;
+            gap: 20px;
+            height: calc(100vh - 200px);
+        }
+
+        .left-panel,
+        .right-panel {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            overflow-y: auto;
+        }
+
+        .center-panel {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+            padding: 20px;
+            overflow: hidden;
+            position: relative;
         }
 
         .game-info {
@@ -110,9 +134,287 @@
             border-left: 4px solid #4CAF50;
         }
 
+        /* Galaxy Map Styles */
+        .galaxy-map {
+            height: 100%;
+            position: relative;
+            overflow: auto;
+            min-height: 600px;
+            background: rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .solar-system {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.1);
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            padding: 10px;
+            min-width: 200px;
+        }
+
+        .system-header h4 {
+            margin: 0 0 10px 0;
+            color: #4CAF50;
+        }
+
+        .conquest-progress {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .progress-bar {
+            flex: 1;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        .progress-fill {
+            height: 100%;
+            background: #4CAF50;
+            transition: width 0.3s ease;
+        }
+
+        .planets {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .planet {
+            position: relative;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-weight: bold;
+        }
+
+        .planet:hover {
+            transform: scale(1.2);
+            z-index: 10;
+        }
+
+        .planet.barren {
+            background: #8B4513;
+        }
+
+        .planet.terran {
+            background: #228B22;
+        }
+
+        .planet.gas-giant {
+            background: #FFD700;
+        }
+
+        .planet.ocean {
+            background: #0066CC;
+        }
+
+        .planet.desert {
+            background: #F4A460;
+        }
+
+        .planet.ice {
+            background: #B0E0E6;
+        }
+
+        .planet.volcanic {
+            background: #FF4500;
+        }
+
+        .planet.toxic {
+            background: #9ACD32;
+        }
+
+        .planet.crystalline {
+            background: #DDA0DD;
+        }
+
+        .planet.metallic {
+            background: #C0C0C0;
+        }
+
+        .planet.unexplored {
+            opacity: 0.5;
+        }
+
+        .planet.explored {
+            opacity: 0.8;
+        }
+
+        .planet.conquered {
+            opacity: 1;
+            box-shadow: 0 0 10px #4CAF50;
+        }
+
+        .planet.terraforming {
+            opacity: 0.9;
+            box-shadow: 0 0 10px #FFD700;
+        }
+
+        /* Planet Panel Styles */
+        .planet-panel {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        .panel-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .close-btn {
+            background: #f44336;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            font-size: 18px;
+        }
+
+        .detail-section {
+            margin-bottom: 20px;
+        }
+
+        .detail-section h4 {
+            color: #4CAF50;
+            margin-bottom: 10px;
+        }
+
+        .resource-list,
+        .modifier-list {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        .resource-item,
+        .modifier-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 5px;
+        }
+
+        .modifier-item.positive {
+            border-left: 4px solid #4CAF50;
+        }
+
+        .modifier-item.negative {
+            border-left: 4px solid #f44336;
+        }
+
+        .planet-actions {
+            margin-top: 20px;
+        }
+
+        .action-section {
+            margin-bottom: 20px;
+        }
+
+        .action-btn {
+            background: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        .action-btn:hover {
+            background: #45a049;
+        }
+
+        /* Resource Dashboard Styles */
+        .resource-dashboard h3 {
+            color: #4CAF50;
+            margin-bottom: 15px;
+        }
+
+        .resource-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 15px;
+        }
+
+        .resource-card {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .resource-header h4 {
+            margin: 0 0 10px 0;
+            color: #4CAF50;
+        }
+
+        .resource-amount {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .resource-generation {
+            font-size: 12px;
+            color: #4CAF50;
+        }
+
+        /* Game Stats Styles */
+        .game-stats h3 {
+            color: #4CAF50;
+            margin-bottom: 15px;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 10px;
+        }
+
+        .stat-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+        }
+
+        .stat-label {
+            font-size: 12px;
+            color: #ccc;
+            margin-bottom: 5px;
+        }
+
+        .stat-value {
+            font-size: 16px;
+            font-weight: bold;
+            color: #4CAF50;
+        }
+
         @media (max-width: 768px) {
-            main {
+            .game-layout {
                 grid-template-columns: 1fr;
+                grid-template-rows: auto auto 1fr;
             }
 
             .controls {
@@ -129,7 +431,7 @@
 </head>
 
 <body>
-    
+
 </body>
 
 </html>
