Add debug information display and enhance solar system generation logging

--- a/index.html
+++ b/index.html
@@ -570,6 +570,20 @@
             font-size: 18px;
         }
 
+        .debug-info {
+            background: rgba(255, 193, 7, 0.2);
+            border: 1px solid #FFC107;
+            border-radius: 4px;
+            padding: 10px;
+            margin-top: 10px;
+        }
+
+        .debug-info p {
+            margin: 0;
+            color: #FFC107;
+            font-size: 12px;
+        }
+
         /* Keep info and map separated vertically */
         .galaxy-content {
             display: grid;
