--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
         header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
         }
 
         h1 {
-            font-size: 2.5em;
+            font-size: 1.8em;
             margin: 0;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
@@ -73,18 +73,19 @@
 
         .game-layout {
             display: grid;
-            grid-template-columns: 300px 1fr 300px;
-            gap: 20px;
-            height: calc(100vh - 200px);
+            grid-template-rows: auto 1fr auto;
+            gap: 10px;
+            height: calc(100vh - 120px);
         }
 
-        .left-panel,
-        .right-panel {
+        .header-panel {
             background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
+            padding: 10px;
             border-radius: 10px;
             backdrop-filter: blur(10px);
-            overflow-y: auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
         }
 
         .center-panel {
@@ -93,6 +94,73 @@
             padding: 20px;
             overflow: hidden;
             position: relative;
+        }
+
+        .footer-panel {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 10px;
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            overflow-y: auto;
+            max-height: 200px;
+        }
+
+        .header-panel>div {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        /* Header and Footer Font Size Reductions */
+        .header-panel h2,
+        .header-panel h3 {
+            font-size: 14px;
+            margin: 0 0 5px 0;
+        }
+
+        .header-panel p {
+            font-size: 11px;
+            margin: 2px 0;
+        }
+
+        .header-panel ul {
+            font-size: 10px;
+        }
+
+        .header-panel li {
+            margin: 3px 0;
+            padding: 5px;
+            font-size: 10px;
+        }
+
+        .footer-panel h2,
+        .footer-panel h3 {
+            font-size: 14px;
+            margin: 0 0 5px 0;
+        }
+
+        .footer-panel p {
+            font-size: 11px;
+            margin: 2px 0;
+        }
+
+        .footer-panel ul {
+            font-size: 10px;
+        }
+
+        .footer-panel li {
+            margin: 3px 0;
+            padding: 5px;
+            font-size: 10px;
+        }
+
+        .debug-info {
+            font-size: 10px;
+        }
+
+        .debug-info p {
+            font-size: 10px;
+            margin: 2px 0;
         }
 
         .game-info {
@@ -150,7 +218,6 @@
             grid-template-rows: repeat(10, 1fr);
             gap: 10px;
             max-width: 1000px;
-            margin: 0 auto;
         }
 
         .grid-row {
