--- a/index.html
+++ b/index.html
@@ -163,6 +163,23 @@
             margin: 2px 0;
         }
 
+        .no-planet-selected {
+            text-align: center;
+            padding: 20px;
+            color: rgba(255, 255, 255, 0.7);
+        }
+
+        .no-planet-selected h3 {
+            margin: 0 0 10px 0;
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 16px;
+        }
+
+        .no-planet-selected p {
+            margin: 0;
+            font-size: 12px;
+        }
+
         .game-info {
             background: rgba(255, 255, 255, 0.1);
             padding: 20px;
@@ -212,40 +229,49 @@
             padding: 20px;
         }
 
-        .grid-container {
+        .systems-container {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .systems-row {
             display: grid;
-            grid-template-columns: repeat(10, 1fr);
-            grid-template-rows: repeat(10, 1fr);
-            gap: 10px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 15px;
             max-width: 1000px;
         }
 
-        .grid-row {
-            display: contents;
+        .no-systems {
+            text-align: center;
+            padding: 40px;
+            color: rgba(255, 255, 255, 0.7);
         }
 
-        .grid-cell {
-            min-height: 120px;
-            min-width: 100px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 8px;
-            background: rgba(255, 255, 255, 0.05);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
+        .no-systems h3 {
+            margin: 0 0 10px 0;
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .no-systems p {
+            margin: 0;
+            font-size: 14px;
         }
 
         .solar-system-cell {
-            width: 100%;
-            height: 100%;
-            border-radius: 6px;
+            min-height: 120px;
+            min-width: 200px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.05);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: center;
             transition: all 0.3s ease;
+            padding: 15px;
+            cursor: pointer;
         }
 
         .solar-system-cell.explored {
