--- a/index.html
+++ b/index.html
@@ -39,6 +39,33 @@
             flex-wrap: wrap;
         }
 
+        .save-load-controls {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .save-btn,
+        .load-btn {
+            padding: 8px 16px;
+            background: rgba(76, 175, 80, 0.8);
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 12px;
+            transition: background 0.3s ease;
+        }
+
+        .save-btn:hover,
+        .load-btn:hover {
+            background: rgba(76, 175, 80, 1);
+        }
+
+        .load-input {
+            display: none;
+        }
+
         .speed-controls {
             display: flex;
             gap: 10px;
@@ -73,7 +100,7 @@
 
         .game-layout {
             display: grid;
-            grid-template-rows: auto 1fr auto;
+            grid-template-rows: auto 1fr;
             gap: 10px;
             height: calc(100vh - 120px);
         }
@@ -94,6 +121,18 @@
             padding: 20px;
             overflow: hidden;
             position: relative;
+        }
+
+        /* Planet View Sections */
+        .planet-details-section {
+            margin-bottom: 20px;
+        }
+
+        .planet-management-section {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 15px;
+            margin-top: 20px;
         }
 
         .footer-panel {
