--- a/index.html
+++ b/index.html
@@ -119,13 +119,66 @@
             background: rgba(255, 255, 255, 0.05);
             border-radius: 10px;
             padding: 20px;
-            overflow: hidden;
+            overflow-y: auto;
             position: relative;
+            height: 100%;
+        }
+
+        /* Custom scrollbar for center panel */
+        .center-panel::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .center-panel::-webkit-scrollbar-track {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 4px;
+        }
+
+        .center-panel::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 4px;
+        }
+
+        .center-panel::-webkit-scrollbar-thumb:hover {
+            background: rgba(255, 255, 255, 0.5);
+        }
+
+        /* Planet View */
+        .planet-view {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .view-controls {
+            margin-bottom: 15px;
+        }
+
+        .back-button {
+            padding: 8px 16px;
+            background: rgba(76, 175, 80, 0.8);
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: background 0.3s ease;
+        }
+
+        .back-button:hover {
+            background: rgba(76, 175, 80, 1);
         }
 
         /* Planet View Sections */
         .planet-details-section {
             margin-bottom: 20px;
+            max-height: 400px;
+            overflow-y: auto;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.05);
         }
 
         .planet-management-section {
@@ -133,6 +186,25 @@
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 15px;
             margin-top: 20px;
+        }
+
+        /* Custom scrollbar for planet details */
+        .planet-details-section::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .planet-details-section::-webkit-scrollbar-track {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 4px;
+        }
+
+        .planet-details-section::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 4px;
+        }
+
+        .planet-details-section::-webkit-scrollbar-thumb:hover {
+            background: rgba(255, 255, 255, 0.5);
         }
 
         .footer-panel {
@@ -260,9 +332,7 @@
 
         /* Galaxy Grid Styles */
         .galaxy-grid {
-            height: 100%;
             overflow: auto;
-            min-height: 600px;
             background: rgba(0, 0, 0, 0.1);
             border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 20px;
@@ -788,10 +858,12 @@
 
         /* Planet Panel Styles */
         .planet-panel {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(255, 255, 255, 0.5);
             border-radius: 10px;
             padding: 20px;
             margin-bottom: 20px;
+            min-height: 100px;
         }
 
         .panel-header {
@@ -1635,6 +1707,89 @@
         .terraform-btn:disabled {
             background: #666;
             cursor: not-allowed;
+        }
+
+        /* Resource Dashboard Styles */
+        .resource-dashboard {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 15px;
+            margin-bottom: 15px;
+        }
+
+        .resource-dashboard h3 {
+            margin: 0 0 15px 0;
+            font-size: 1.2em;
+            color: #fff;
+        }
+
+        .resource-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 10px;
+        }
+
+        .resource-card {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            padding: 10px;
+            transition: all 0.3s ease;
+        }
+
+        .resource-card.at-capacity {
+            border: 2px solid #f44336;
+            background: rgba(244, 67, 54, 0.1);
+        }
+
+        .resource-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+
+        .resource-header h4 {
+            margin: 0;
+            font-size: 0.9em;
+            color: #fff;
+        }
+
+        .capacity-warning {
+            background: #f44336;
+            color: white;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-size: 0.7em;
+            font-weight: bold;
+        }
+
+        .resource-amount {
+            font-size: 1.1em;
+            font-weight: bold;
+            color: #4CAF50;
+            margin-bottom: 8px;
+        }
+
+        .resource-capacity-bar {
+            width: 100%;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 4px;
+            overflow: hidden;
+            margin: 5px 0;
+        }
+
+        .capacity-fill {
+            height: 100%;
+            background: linear-gradient(90deg, #4CAF50, #FFC107, #f44336);
+            transition: width 0.3s ease;
+        }
+
+        .resource-generation {
+            font-size: 0.8em;
+            color: #4CAF50;
+            font-weight: bold;
         }
 
         @media (max-width: 768px) {
